--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,14 @@ body {
   font-size: 16px;
   letter-spacing: 0.02em;
 }
+.container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+main {
+  flex-grow: 1;
+}
 .logo,
 .footer-logo {
   text-decoration: none;
