--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,8 @@ body {
   line-height: 1.5;
   font-size: 16px;
   letter-spacing: 0.02em;
+  margin-bottom: 0;
+  margin-right: 156px;
 }
 .container {
   display: flex;
