--- a/css/styles.css
+++ b/css/styles.css
@@ -6,12 +6,12 @@ body {
   font-size: 16px;
   letter-spacing: 0.02em;
   margin-bottom: 0;
-  margin-right: 156px;
 }
 .container {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  width: 1158px;
 }
 main {
   flex-grow: 1;
@@ -54,6 +54,11 @@ a {
 .address-link:hover,
 .address-link:focus {
   color: #404bbf;
+}
+.header-container {
+  margin: 24px 156px;
+  display: flex;
+  justify-content: space-around;
 }
 .headline-section {
   background-color: #2e2f42;
@@ -119,4 +124,11 @@ a {
 }
 .footer-text {
   color: #f4f4fd;
+}
+.footer-container {
+  display: block;
+  width: 264px;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  margin-left: 156px;
 }
