--- a/css/styles.css
+++ b/css/styles.css
@@ -6,13 +6,12 @@ body {
   font-size: 16px;
   letter-spacing: 0.02em;
   margin-bottom: 0;
-  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
 }
 .container {
-  width: 1158px;
+  width: 1128px;
   margin: 0 auto;
 }
 main {
@@ -145,7 +144,6 @@ h6 {
 .qualities-list {
   display: flex;
   width: calc((1158px * 3) / 4);
-  flex-direction: row;
   gap: 24px;
   justify-content: space-between;
   margin: 0 auto;
@@ -159,7 +157,6 @@ h6 {
 .team-list {
   display: flex;
   width: calc((1158px * 3) / 4);
-  flex-direction: row;
   gap: 24px;
   justify-content: space-between;
 }
@@ -206,16 +203,6 @@ h6 {
   padding-top: 24px;
   padding-bottom: 24px;
 }
-.nav-list {
-  display: flex;
-  flex-direction: row;
-  gap: 40px;
-}
-.address-list {
-  display: flex;
-  flex-direction: row;
-  gap: 40px;
-}
 
 .footer-section a {
   display: block;
@@ -230,4 +217,38 @@ h6 {
   padding: 0;
   white-space: nowrap;
   overflow: hidden;
+}
+.team-info {
+  padding: 32px 16px;
+}
+.team-info h3,
+.portfolio-info h3 {
+  margin-bottom: 8px;
+}
+.portfolio-info {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  padding-left: 16px;
+  border-top: 0px;
+  border-bottom: 1px solid #e7e9fc;
+  border-left: 1px solid #e7e9fc;
+  border-right: 1px solid #e7e9fc;
+}
+.nav-header {
+  display: flex;
+  justify-content: flex-start;
+  gap: 76px;
+}
+.header-container {
+  display: flex;
+}
+.nav-list {
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
+}
+.address-list {
+  display: flex;
+  gap: 40px;
+  margin-left: 332px;
 }
