--- a/css/styles.css
+++ b/css/styles.css
@@ -238,6 +238,7 @@ h6 {
   display: flex;
   justify-content: flex-start;
   gap: 76px;
+  flex-grow: 1;
 }
 .header-container {
   display: flex;
@@ -250,5 +251,4 @@ h6 {
 .address-list {
   display: flex;
   gap: 40px;
-  margin-left: 332px;
 }
