--- a/css/styles.css
+++ b/css/styles.css
@@ -17,20 +17,6 @@ body {
 main {
   flex-grow: 1;
 }
-.logo,
-.footer-logo {
-  text-decoration: none;
-  text-transform: uppercase;
-  color: #4d5ae5;
-  font-family: "Raleway", sans-serif;
-  line-height: 1.17;
-  font-size: 18px;
-  letter-spacing: 0.03em;
-  font-weight: 700;
-}
-.logo .logo-part {
-  color: #2e2f42;
-}
 ul,
 ol {
   list-style-type: none;
@@ -51,6 +37,29 @@ h6 {
   margin-top: 0;
   margin-bottom: 0;
 }
+img {
+  display: block;
+}
+.header-container {
+  display: flex;
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
+.logo,
+.footer-logo {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #4d5ae5;
+  font-family: "Raleway", sans-serif;
+  line-height: 1.17;
+  font-size: 18px;
+  letter-spacing: 0.03em;
+  font-weight: 700;
+}
+.logo .logo-part {
+  color: #2e2f42;
+}
 .nav-link {
   color: #2e2f42;
   font-weight: 500;
@@ -69,9 +78,24 @@ h6 {
 .address-link:focus {
   color: #404bbf;
 }
-
+.nav-header {
+  display: flex;
+  justify-content: flex-start;
+  gap: 76px;
+  flex-grow: 1;
+}
+.nav-list {
+  display: flex;
+  gap: 40px;
+}
+.address-list {
+  display: flex;
+  gap: 40px;
+}
 .headline-section {
   background-color: #2e2f42;
+  padding-top: 188px;
+  padding-bottom: 188px;
 }
 .headline-title {
   color: #ffffff;
@@ -80,6 +104,10 @@ h6 {
   line-height: 1.07;
   text-align: center;
   letter-spacing: 0.02em;
+  width: 496px;
+  height: 120px;
+  margin: 0 auto;
+  margin-bottom: 48px;
 }
 .headline-button {
   background-color: #4d5ae5;
@@ -90,10 +118,40 @@ h6 {
   text-align: center;
   font-size: inherit;
   line-height: inherit;
+  display: block;
+  margin: 0 auto;
+  border-radius: 4px;
+  border: 0;
+  padding: 16px 32px;
 }
 .headline-button:hover,
 .headline-button:focus {
   background-color: #404bbf;
+}
+.qualities-list {
+  display: flex;
+  gap: 24px;
+  margin: 0 auto;
+}
+.qualities-item {
+  width: calc((100% - 3 * 24px) / 4);
+}
+.qualities-item h3 {
+  display: block;
+  margin-bottom: 8px;
+}
+.features-section {
+  padding: 120px 156px;
+}
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  overflow: hidden;
 }
 .team-title,
 .portfolio-title {
@@ -117,106 +175,18 @@ h6 {
 }
 .team-section {
   background-color: #f4f4fd;
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.team-list {
+  display: flex;
+  gap: 24px;
+  justify-content: space-between;
 }
 .team-card {
   background-color: #ffffff;
   text-align: center;
-}
-.portfolio-card {
-  border-width: 1px, 1px, 1px, 1px;
-  border-color: #e7e9fc;
-}
-.footer-section {
-  background-color: #2e2f42;
-}
-.footer-logo .footer-logo-part {
-  color: #f4f4fd;
-}
-.footer-text {
-  color: #f4f4fd;
-}
-.footer-section .container {
-  width: 264px;
-  margin-top: 100px;
-  margin-bottom: 100px;
-  margin-left: 156px;
-}
-.qualities-list {
-  display: flex;
-  width: calc((1158px * 3) / 4);
-  gap: 24px;
-  justify-content: space-between;
-  margin: 0 auto;
-}
-.qualities-item {
-  width: 264px;
-}
-.features-section {
-  padding: 120px 156px;
-}
-.team-list {
-  display: flex;
-  width: calc((1158px * 3) / 4);
-  gap: 24px;
-  justify-content: space-between;
-}
-.team-section {
-  padding-top: 120px;
-  padding-bottom: 120px;
-}
-.portfolio-list {
-  display: flex;
-  flex-direction: row;
-  gap: 24px;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-.portfolio-card {
-  width: 360px;
-  height: 420px;
-}
-.portfolio-section {
-  padding-top: 150px;
-  padding-bottom: 90px;
-}
-.headline-button {
-  display: block;
-  margin: 0 auto;
-  border-radius: 4px;
-  border: 0;
-  padding: 16px 32px;
-}
-.headline-title {
-  width: 496px;
-  height: 120px;
-  margin: 0 auto;
-  margin-bottom: 48px;
-}
-.headline-section {
-  padding-top: 188px;
-  padding-bottom: 188px;
-}
-.header {
-  display: flex;
-  justify-content: space-evenly;
-  flex-direction: row;
-  padding-top: 24px;
-  padding-bottom: 24px;
-}
-
-.footer-section a {
-  display: block;
-  margin-bottom: 16px;
-}
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  overflow: hidden;
+  width: calc((100% - 3 * 24px) / 4);
 }
 .team-info {
   padding: 32px 16px;
@@ -234,21 +204,37 @@ h6 {
   border-left: 1px solid #e7e9fc;
   border-right: 1px solid #e7e9fc;
 }
-.nav-header {
-  display: flex;
-  justify-content: flex-start;
-  gap: 76px;
-  flex-grow: 1;
+.portfolio-section {
+  padding-top: 150px;
+  padding-bottom: 90px;
 }
-.header-container {
+.portfolio-list {
   display: flex;
+  column-gap: 24px;
+  row-gap: 48px;
+  flex-wrap: wrap;
 }
-.nav-list {
-  display: flex;
-  flex-direction: row;
-  gap: 40px;
+.portfolio-card {
+  border-width: 1px, 1px, 1px, 1px;
+  border-color: #e7e9fc;
+  width: calc((100% - 2 * 24px) / 3);
 }
-.address-list {
-  display: flex;
-  gap: 40px;
+.footer-section {
+  background-color: #2e2f42;
+}
+.footer-logo .footer-logo-part {
+  color: #f4f4fd;
+}
+.footer-text {
+  color: #f4f4fd;
+}
+.footer-container {
+  width: 264px;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  margin-left: 156px;
+}
+.footer-section a {
+  display: block;
+  margin-bottom: 16px;
 }
