--- a/css/styles.css
+++ b/css/styles.css
@@ -187,6 +187,7 @@ img {
   background-color: #ffffff;
   text-align: center;
   width: calc((100% - 3 * 24px) / 4);
+  border-radius: 0 0 4px 4px;
 }
 .team-info {
   padding: 32px 16px;
