--- a/css/styles.css
+++ b/css/styles.css
@@ -11,8 +11,9 @@ body {
   min-height: 100vh;
 }
 .container {
-  width: 1128px;
+  width: 1158px;
   margin: 0 auto;
+  padding: 0 15px;
 }
 main {
   flex-grow: 1;
@@ -20,9 +21,8 @@ main {
 ul,
 ol {
   list-style-type: none;
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-left: 0;
+  margin: 0;
+  padding: 0;
 }
 a {
   text-decoration: none;
@@ -34,8 +34,7 @@ h3,
 h4,
 h5,
 h6 {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
 }
 img {
   display: block;
@@ -44,6 +43,7 @@ img {
   display: flex;
   padding-top: 24px;
   padding-bottom: 24px;
+  border-bottom: 1px solid #e7e9fc;
 }
 
 .logo,
