--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ body {
   min-height: 100vh;
 }
 .container {
-  width: 1158px;
+  max-width: 1158px;
   margin: 0 auto;
   padding: 0 15px;
 }
@@ -38,6 +38,8 @@ h6 {
 }
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
 .header-container {
   display: flex;
@@ -139,8 +141,8 @@ img {
   display: block;
   margin-bottom: 8px;
 }
-.features-section {
-  padding: 120px 156px;
+.section {
+  padding: 120px 0;
 }
 .visually-hidden {
   position: absolute;
@@ -174,8 +176,6 @@ img {
 }
 .team-section {
   background-color: #f4f4fd;
-  padding-top: 120px;
-  padding-bottom: 120px;
 }
 .team-list {
   display: flex;
@@ -203,10 +203,6 @@ img {
   border-bottom: 1px solid #e7e9fc;
   border-left: 1px solid #e7e9fc;
   border-right: 1px solid #e7e9fc;
-}
-.portfolio-section {
-  padding-top: 150px;
-  padding-bottom: 90px;
 }
 .portfolio-list {
   display: flex;
