--- a/css/styles.css
+++ b/css/styles.css
@@ -41,11 +41,11 @@ img {
   max-width: 100%;
   height: auto;
 }
+header {
+  border-bottom: 1px solid #e7e9fc;
+}
 .header-container {
   display: flex;
-  padding-top: 24px;
-  padding-bottom: 24px;
-  border-bottom: 1px solid #e7e9fc;
 }
 
 .logo,
@@ -62,14 +62,21 @@ img {
 .logo .logo-part {
   color: #2e2f42;
 }
+.header-logo {
+  margin-right: 76px;
+}
 .nav-link {
   color: #2e2f42;
   font-weight: 500;
   font-size: inherit;
   text-transform: capitalize;
+  padding: 24px 0;
+  display: block;
 }
 .address-link {
   color: inherit;
+  padding: 24px 0;
+  display: block;
 }
 .address-header {
   font-style: normal;
@@ -83,8 +90,8 @@ img {
 .nav-header {
   display: flex;
   justify-content: flex-start;
-  gap: 76px;
   flex-grow: 1;
+  align-items: center;
 }
 .nav-list {
   display: flex;
@@ -93,6 +100,7 @@ img {
 .address-list {
   display: flex;
   gap: 40px;
+  align-items: center;
 }
 .headline-section {
   background-color: #2e2f42;
@@ -106,7 +114,7 @@ img {
   line-height: 1.07;
   text-align: center;
   letter-spacing: 0.02em;
-  width: 496px;
+  max-width: 496px;
   margin: 0 auto;
   margin-bottom: 48px;
 }
@@ -124,6 +132,7 @@ img {
   border-radius: 4px;
   border: 0;
   padding: 16px 32px;
+  min-width: 149px;
 }
 .headline-button:hover,
 .headline-button:focus {
@@ -189,16 +198,14 @@ img {
   border-radius: 0 0 4px 4px;
 }
 .team-info {
-  padding: 32px 16px;
+  padding: 32px 0;
 }
 .team-info h3,
 .portfolio-info h3 {
   margin-bottom: 8px;
 }
 .portfolio-info {
-  padding-top: 32px;
-  padding-bottom: 32px;
-  padding-left: 16px;
+  padding: 32px 16px;
   border-top: 0px;
   border-bottom: 1px solid #e7e9fc;
   border-left: 1px solid #e7e9fc;
@@ -225,12 +232,12 @@ img {
   color: #f4f4fd;
 }
 .footer-container {
-  width: 264px;
-  margin-top: 100px;
-  margin-bottom: 100px;
-  margin-left: 156px;
-}
-.footer-section a {
   display: block;
+  max-width: 264px;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+.footer-logo {
+  display: inline-block;
   margin-bottom: 16px;
 }
