--- a/css/styles.css
+++ b/css/styles.css
@@ -125,7 +125,7 @@ header {
   display: block;
   margin: 0 auto;
   border-radius: 4px;
-  border: 0;
+  border: none;
   padding: 16px 32px;
   min-width: 149px;
 }
