--- a/css/styles.css
+++ b/css/styles.css
@@ -128,6 +128,7 @@ header {
   border: none;
   padding: 16px 32px;
   min-width: 169px;
+  height: 56px;
 }
 .headline-button:hover,
 .headline-button:focus {
@@ -219,8 +220,7 @@ header {
 }
 .footer-section {
   background-color: #2e2f42;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding: 100px 0;
 }
 .footer-logo .footer-logo-part {
   color: #f4f4fd;
