--- a/css/styles.css
+++ b/css/styles.css
@@ -157,6 +157,8 @@ header {
   border: 0;
   padding: 0;
   white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
   overflow: hidden;
 }
 .team-title,
